--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/alertas-relevantes/alertas-relevantes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/alertas-relevantes/alertas-relevantes.component.html
@@ -7,10 +7,14 @@
                         <div class="col-md-12">
                           <div class="row">
                             <div class="pr-1">
-                              <label class="label-left" style="margin-top: 1.5em;">¿Se identificaron alertas relevantes en desarrollo de la obra?</label>
+                                <label  class="label-left"
+                                        style="margin-top: 1.5em;"
+                                        [class.color-secondaryColor]="( formAlertasRelevantes.get('seIdentificaronAlertas').invalid && formAlertasRelevantes.get('seIdentificaronAlertas').touched) || ( formAlertasRelevantes.get('seIdentificaronAlertas').invalid && esRegistroNuevo === false )">
+                                        ¿Se identificaron alertas relevantes en desarrollo de la obra?
+                                </label>
                             </div>
                             <div class="col d-flex">
-                                <section style="width: 100%;">
+                                <section style="width: 95%;">
                                     <mat-form-field appearance="fill">
                                       <mat-select class="padding-left" formControlName="seIdentificaronAlertas" required>
                                         <mat-option *ngFor="let requisito of booleanosEnsayosLaboratorio" [value]="requisito.value">
@@ -20,6 +24,15 @@
                                     </mat-form-field>
                                   </section>
                             </div>
+                            <span class="icon-incompleto" style="margin-top: .5em;">
+                                <img  class="icon-incompleto--img"
+                                      src="assets/img/icon/incompleto.svg"
+                                      alt="este campo es requerido"
+                                      [matTooltipPosition]="'above'"
+                                      matTooltip="Debe ingresar la información en el campo para continuar"
+                                      matTooltipClass="info-tooltip"
+                                      *ngIf="( formAlertasRelevantes.get('seIdentificaronAlertas').invalid && formAlertasRelevantes.get('seIdentificaronAlertas').touched) || ( formAlertasRelevantes.get('seIdentificaronAlertas').invalid && esRegistroNuevo === false )">
+                            </span>
                           </div>
                         </div>
                     </div>
@@ -27,7 +40,10 @@
                         <div class="col-md-12">
                           <div>
                             <div class="pr-1">
-                              <label class="label-left">Alertas relevantes identificadas</label>
+                                <label  class="label-left"
+                                        [class.color-secondaryColor]="( formAlertasRelevantes.get('alerta').invalid && formAlertasRelevantes.get('alerta').touched) || ( formAlertasRelevantes.get('alerta').invalid && esRegistroNuevo === false )">
+                                        Alertas relevantes identificadas
+                                </label>
                             </div>
                             <div class="col d-flex">
                                 <quill-editor   class="quill-editor-style card position-relative"
@@ -44,6 +60,15 @@
                                 </span>
                                 <span class="contador miles" *ngIf="formAlertasRelevantes.get('alerta').value === null" style="margin-top: 3.5em;">
                                     2000
+                                </span>
+                                <span class="icon-incompleto" style="margin-top: 3.6em;">
+                                    <img  class="icon-incompleto--img"
+                                          src="assets/img/icon/incompleto.svg"
+                                          alt="este campo es requerido"
+                                          [matTooltipPosition]="'above'"
+                                          matTooltip="Debe ingresar la información en el campo para continuar"
+                                          matTooltipClass="info-tooltip"
+                                          *ngIf="( formAlertasRelevantes.get('alerta').invalid && formAlertasRelevantes.get('alerta').touched) || ( formAlertasRelevantes.get('alerta').invalid && esRegistroNuevo === false )">
                                 </span>
                             </div>
                           </div>
