--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-reporte-actividades-realizadas/form-reporte-actividades-realizadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-reporte-actividades-realizadas/form-reporte-actividades-realizadas.component.html
@@ -8,7 +8,10 @@
                       <div class="col-md-12">
                         <div>
                           <div class="pr-1">
-                            <label class="label-left">Técnicas</label>
+                            <label  class="label-left"
+                                    [class.color-secondaryColor]="( formActividadesRealizadas.get('actividadTecnica').invalid && formActividadesRealizadas.get('actividadTecnica').touched) || ( formActividadesRealizadas.get('actividadTecnica').invalid && esRegistroNuevo === false )">
+                                    Técnicas
+                            </label>
                           </div>
                           <div class="col d-flex" style="width: 100%;">
                               <quill-editor   class="quill-editor-style card position-relative"
@@ -26,6 +29,15 @@
                               <span class="contador miles" *ngIf="formActividadesRealizadas.get('actividadTecnica').value === null" style="margin-top: 3.5em;">
                                   2000
                               </span>
+                              <span class="icon-incompleto" style="margin-top: 3.6em;">
+                                <img  class="icon-incompleto--img"
+                                      src="assets/img/icon/incompleto.svg"
+                                      alt="este campo es requerido"
+                                      [matTooltipPosition]="'above'"
+                                      matTooltip="Debe ingresar la información en el campo para continuar"
+                                      matTooltipClass="info-tooltip"
+                                      *ngIf="( formActividadesRealizadas.get('actividadTecnica').invalid && formActividadesRealizadas.get('actividadTecnica').touched) || ( formActividadesRealizadas.get('actividadTecnica').invalid && esRegistroNuevo === false )">
+                              </span>
                           </div>
                         </div>
                       </div>
@@ -34,7 +46,10 @@
                       <div class="col-md-12">
                         <div>
                           <div class="pr-1">
-                            <label class="label-left">Legales</label>
+                            <label  class="label-left"
+                                    [class.color-secondaryColor]="( formActividadesRealizadas.get('actividadLegal').invalid && formActividadesRealizadas.get('actividadLegal').touched) || ( formActividadesRealizadas.get('actividadLegal').invalid && esRegistroNuevo === false )">
+                                    Legales
+                            </label>
                           </div>
                           <div class="col d-flex" style="width: 100%;">
                               <quill-editor   class="quill-editor-style card position-relative"
@@ -52,6 +67,15 @@
                               <span class="contador miles" *ngIf="formActividadesRealizadas.get('actividadLegal').value === null" style="margin-top: 3.5em;">
                                   2000
                               </span>
+                              <span class="icon-incompleto" style="margin-top: 3.6em;">
+                                <img  class="icon-incompleto--img"
+                                      src="assets/img/icon/incompleto.svg"
+                                      alt="este campo es requerido"
+                                      [matTooltipPosition]="'above'"
+                                      matTooltip="Debe ingresar la información en el campo para continuar"
+                                      matTooltipClass="info-tooltip"
+                                      *ngIf="( formActividadesRealizadas.get('actividadLegal').invalid && formActividadesRealizadas.get('actividadLegal').touched) || ( formActividadesRealizadas.get('actividadLegal').invalid && esRegistroNuevo === false )">
+                              </span>
                           </div>
                         </div>
                       </div>
@@ -60,7 +84,10 @@
                       <div class="col-md-12">
                         <div>
                           <div class="pr-1">
-                            <label class="label-left">Administrativas - Financieras</label>
+                            <label  class="label-left"
+                                    [class.color-secondaryColor]="( formActividadesRealizadas.get('actividadAdministrativaFinanciera').invalid && formActividadesRealizadas.get('actividadAdministrativaFinanciera').touched) || ( formActividadesRealizadas.get('actividadAdministrativaFinanciera').invalid && esRegistroNuevo === false )">
+                                    Administrativas - Financieras
+                            </label>
                           </div>
                           <div class="col d-flex" style="width: 100%;">
                               <quill-editor   class="quill-editor-style card position-relative"
@@ -77,6 +104,15 @@
                               </span>
                               <span class="contador miles" *ngIf="formActividadesRealizadas.get('actividadAdministrativaFinanciera').value === null" style="margin-top: 3.5em;">
                                   2000
+                              </span>
+                              <span class="icon-incompleto" style="margin-top: 3.6em;">
+                                <img  class="icon-incompleto--img"
+                                      src="assets/img/icon/incompleto.svg"
+                                      alt="este campo es requerido"
+                                      [matTooltipPosition]="'above'"
+                                      matTooltip="Debe ingresar la información en el campo para continuar"
+                                      matTooltipClass="info-tooltip"
+                                      *ngIf="( formActividadesRealizadas.get('actividadAdministrativaFinanciera').invalid && formActividadesRealizadas.get('actividadAdministrativaFinanciera').touched) || ( formActividadesRealizadas.get('actividadAdministrativaFinanciera').invalid && esRegistroNuevo === false )">
                               </span>
                           </div>
                         </div>
@@ -138,7 +174,10 @@
                       <div class="col-md-12">
                         <div>
                           <div class="pr-1">
-                            <label class="label-left">Técnicas</label>
+                            <label  class="label-left"
+                                    [class.color-secondaryColor]="( formActividadesRealizadasSiguienteSemana.get('actividadTecnicaSiguiente').invalid && formActividadesRealizadasSiguienteSemana.get('actividadTecnicaSiguiente').touched) || ( formActividadesRealizadasSiguienteSemana.get('actividadTecnicaSiguiente').invalid && esRegistroNuevo === false )">
+                                    Técnicas
+                            </label>
                           </div>
                           <div class="col d-flex" style="width: 100%;">
                               <quill-editor   class="quill-editor-style card position-relative"
@@ -156,6 +195,15 @@
                               <span class="contador miles" *ngIf="formActividadesRealizadasSiguienteSemana.get('actividadTecnicaSiguiente').value === null" style="margin-top: 3.5em;">
                                   2000
                               </span>
+                              <span class="icon-incompleto" style="margin-top: 3.6em;">
+                                <img  class="icon-incompleto--img"
+                                      src="assets/img/icon/incompleto.svg"
+                                      alt="este campo es requerido"
+                                      [matTooltipPosition]="'above'"
+                                      matTooltip="Debe ingresar la información en el campo para continuar"
+                                      matTooltipClass="info-tooltip"
+                                      *ngIf="( formActividadesRealizadasSiguienteSemana.get('actividadTecnicaSiguiente').invalid && formActividadesRealizadasSiguienteSemana.get('actividadTecnicaSiguiente').touched) || ( formActividadesRealizadasSiguienteSemana.get('actividadTecnicaSiguiente').invalid && esRegistroNuevo === false )">
+                              </span>
                           </div>
                         </div>
                       </div>
@@ -164,7 +212,10 @@
                       <div class="col-md-12">
                         <div>
                           <div class="pr-1">
-                            <label class="label-left">Legales</label>
+                            <label  class="label-left"
+                                    [class.color-secondaryColor]="( formActividadesRealizadasSiguienteSemana.get('actividadLegalSiguiente').invalid && formActividadesRealizadasSiguienteSemana.get('actividadLegalSiguiente').touched) || ( formActividadesRealizadasSiguienteSemana.get('actividadLegalSiguiente').invalid && esRegistroNuevo === false )">
+                                    Legales
+                            </label>
                           </div>
                           <div class="col d-flex" style="width: 100%;">
                               <quill-editor   class="quill-editor-style card position-relative"
@@ -182,6 +233,15 @@
                               <span class="contador miles" *ngIf="formActividadesRealizadasSiguienteSemana.get('actividadLegalSiguiente').value === null" style="margin-top: 3.5em;">
                                   2000
                               </span>
+                              <span class="icon-incompleto" style="margin-top: 3.6em;">
+                                <img  class="icon-incompleto--img"
+                                      src="assets/img/icon/incompleto.svg"
+                                      alt="este campo es requerido"
+                                      [matTooltipPosition]="'above'"
+                                      matTooltip="Debe ingresar la información en el campo para continuar"
+                                      matTooltipClass="info-tooltip"
+                                      *ngIf="( formActividadesRealizadasSiguienteSemana.get('actividadLegalSiguiente').invalid && formActividadesRealizadasSiguienteSemana.get('actividadLegalSiguiente').touched) || ( formActividadesRealizadasSiguienteSemana.get('actividadLegalSiguiente').invalid && esRegistroNuevo === false )">
+                              </span>
                           </div>
                         </div>
                       </div>
@@ -190,7 +250,10 @@
                       <div class="col-md-12">
                         <div>
                           <div class="pr-1">
-                            <label class="label-left">Administrativas - Financieras</label>
+                            <label  class="label-left"
+                                    [class.color-secondaryColor]="( formActividadesRealizadasSiguienteSemana.get('actividadAdministrativaFinancieraSiguiente').invalid && formActividadesRealizadasSiguienteSemana.get('actividadAdministrativaFinancieraSiguiente').touched) || ( formActividadesRealizadasSiguienteSemana.get('actividadAdministrativaFinancieraSiguiente').invalid && esRegistroNuevo === false )">
+                                    Administrativas - Financieras
+                            </label>
                           </div>
                           <div class="col d-flex" style="width: 100%;">
                               <quill-editor   class="quill-editor-style card position-relative"
@@ -207,6 +270,15 @@
                               </span>
                               <span class="contador miles" *ngIf="formActividadesRealizadasSiguienteSemana.get('actividadAdministrativaFinancieraSiguiente').value === null" style="margin-top: 3.5em;">
                                   2000
+                              </span>
+                              <span class="icon-incompleto" style="margin-top: 3.6em;">
+                                <img  class="icon-incompleto--img"
+                                      src="assets/img/icon/incompleto.svg"
+                                      alt="este campo es requerido"
+                                      [matTooltipPosition]="'above'"
+                                      matTooltip="Debe ingresar la información en el campo para continuar"
+                                      matTooltipClass="info-tooltip"
+                                      *ngIf="( formActividadesRealizadasSiguienteSemana.get('actividadAdministrativaFinancieraSiguiente').invalid && formActividadesRealizadasSiguienteSemana.get('actividadAdministrativaFinancieraSiguiente').touched) || ( formActividadesRealizadasSiguienteSemana.get('actividadAdministrativaFinancieraSiguiente').invalid && esRegistroNuevo === false )">
                               </span>
                           </div>
                         </div>
