--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-social/gestion-social.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-social/gestion-social.component.html
@@ -7,7 +7,10 @@
                         <div class="col-md-7">
                             <div class="row">
                                 <div class="pr-1">
-                                    <label class="label-left">Cantidad de empleos directos generados</label>
+                                    <label  class="label-left"
+                                            [class.color-secondaryColor]="( formGestionSocial.get('cantidadEmpleosDirectos').invalid && formGestionSocial.get('cantidadEmpleosDirectos').touched) || ( formGestionSocial.get('cantidadEmpleosDirectos').invalid && esRegistroNuevo === false )">
+                                            Cantidad de empleos directos generados
+                                    </label>
                                 </div>
                                 <div class="col d-flex">
                                     <section style="width: 100%;">
@@ -22,6 +25,15 @@
                                     </section>
                                     <span class="contador">{{3 - formGestionSocial.get( 'cantidadEmpleosDirectos' ).value.length}}</span>
                                 </div>
+                                <span class="icon-incompleto">
+                                    <img  class="icon-incompleto--img"
+                                          src="assets/img/icon/incompleto.svg"
+                                          alt="este campo es requerido"
+                                          [matTooltipPosition]="'above'"
+                                          matTooltip="Debe ingresar la información en el campo para continuar"
+                                          matTooltipClass="info-tooltip"
+                                          *ngIf="( formGestionSocial.get('cantidadEmpleosDirectos').invalid && formGestionSocial.get('cantidadEmpleosDirectos').touched) || ( formGestionSocial.get('cantidadEmpleosDirectos').invalid && esRegistroNuevo === false )">
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -29,7 +41,10 @@
                         <div class="col-md-7">
                             <div class="row">
                                 <div class="pr-1">
-                                    <label class="label-left">Cantidad de empleos indirectos generados</label>
+                                    <label  class="label-left"
+                                            [class.color-secondaryColor]="( formGestionSocial.get('cantidadEmpleosIndirectos').invalid && formGestionSocial.get('cantidadEmpleosIndirectos').touched) || ( formGestionSocial.get('cantidadEmpleosIndirectos').invalid && esRegistroNuevo === false )">
+                                            Cantidad de empleos indirectos generados
+                                    </label>
                                 </div>
                                 <div class="col d-flex">
                                     <section style="width: 100%;">
@@ -44,6 +59,15 @@
                                     </section>
                                     <span class="contador">{{3 - formGestionSocial.get( 'cantidadEmpleosIndirectos' ).value.length}}</span>
                                 </div>
+                                <span class="icon-incompleto">
+                                    <img  class="icon-incompleto--img"
+                                          src="assets/img/icon/incompleto.svg"
+                                          alt="este campo es requerido"
+                                          [matTooltipPosition]="'above'"
+                                          matTooltip="Debe ingresar la información en el campo para continuar"
+                                          matTooltipClass="info-tooltip"
+                                          *ngIf="( formGestionSocial.get('cantidadEmpleosIndirectos').invalid && formGestionSocial.get('cantidadEmpleosIndirectos').touched) || ( formGestionSocial.get('cantidadEmpleosIndirectos').invalid && esRegistroNuevo === false )">
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -73,10 +97,14 @@
                         <div class="col-md-12">
                             <div class="row">
                                 <div class="pr-1">
-                                    <label class="label-left" style="margin-top: 1.5em;">¿Se realizaron reuniones, socializaciones o capacitaciones con la comunidad durante la semana?</label>
+                                    <label  class="label-left"
+                                            style="margin-top: 1.5em;"
+                                            [class.color-secondaryColor]="( formGestionSocial.get('seRealizaronReuniones').invalid && formGestionSocial.get('seRealizaronReuniones').touched) || ( formGestionSocial.get('seRealizaronReuniones').invalid && esRegistroNuevo === false )">
+                                            ¿Se realizaron reuniones, socializaciones o capacitaciones con la comunidad durante la semana?
+                                    </label>
                                 </div>
                                 <div class="col d-flex">
-                                    <section style="width: 100%;">
+                                    <section style="width: 95%;">
                                         <mat-form-field class="w-50" appearance="fill">
                                           <mat-select class="padding-left" formControlName="seRealizaronReuniones" required>
                                             <mat-option *ngFor="let requisito of booleanosEnsayosLaboratorio" [value]="requisito.value">
@@ -86,6 +114,15 @@
                                         </mat-form-field>
                                     </section>
                                 </div>
+                                <span class="icon-incompleto" style="margin-top: .5em;">
+                                    <img  class="icon-incompleto--img"
+                                          src="assets/img/icon/incompleto.svg"
+                                          alt="este campo es requerido"
+                                          [matTooltipPosition]="'above'"
+                                          matTooltip="Debe ingresar la información en el campo para continuar"
+                                          matTooltipClass="info-tooltip"
+                                          *ngIf="( formGestionSocial.get('seRealizaronReuniones').invalid && formGestionSocial.get('seRealizaronReuniones').touched) || ( formGestionSocial.get('seRealizaronReuniones').invalid && esRegistroNuevo === false )">
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -94,7 +131,10 @@
                             <div class="col-md-12">
                               <div>
                                 <div class="pr-1">
-                                  <label class="label-left">Tema tratado con la comunidad</label>
+                                    <label  class="label-left"
+                                            [class.color-secondaryColor]="( formGestionSocial.get('temaComunidad').invalid && formGestionSocial.get('temaComunidad').touched) || ( formGestionSocial.get('temaComunidad').invalid && esRegistroNuevo === false )">
+                                            Tema tratado con la comunidad
+                                    </label>
                                 </div>
                                 <div class="col d-flex" style="width: 100%;">
                                     <quill-editor   class="quill-editor-style card position-relative"
@@ -112,6 +152,15 @@
                                     <span class="contador miles" *ngIf="formGestionSocial.get('temaComunidad').value === null" style="margin-top: 3.5em;">
                                         200
                                     </span>
+                                    <span class="icon-incompleto" style="margin-top: 3.6em;">
+                                        <img  class="icon-incompleto--img"
+                                              src="assets/img/icon/incompleto.svg"
+                                              alt="este campo es requerido"
+                                              [matTooltipPosition]="'above'"
+                                              matTooltip="Debe ingresar la información en el campo para continuar"
+                                              matTooltipClass="info-tooltip"
+                                              *ngIf="( formGestionSocial.get('temaComunidad').invalid && formGestionSocial.get('temaComunidad').touched) || ( formGestionSocial.get('temaComunidad').invalid && esRegistroNuevo === false )">
+                                    </span>
                                 </div>
                               </div>
                             </div>
@@ -120,7 +169,10 @@
                             <div class="col-md-12">
                               <div>
                                 <div class="pr-1">
-                                  <label class="label-left">Conclusiones</label>
+                                    <label  class="label-left"
+                                            [class.color-secondaryColor]="( formGestionSocial.get('conclusion').invalid && formGestionSocial.get('conclusion').touched) || ( formGestionSocial.get('conclusion').invalid && esRegistroNuevo === false )">
+                                            Conclusiones
+                                    </label>
                                 </div>
                                 <div class="col d-flex">
                                     <quill-editor   class="quill-editor-style card position-relative"
@@ -138,6 +190,15 @@
                                     <span class="contador miles" *ngIf="formGestionSocial.get('conclusion').value === null" style="margin-top: 3.5em;">
                                         200
                                     </span>
+                                    <span class="icon-incompleto" style="margin-top: 3.6em;">
+                                        <img  class="icon-incompleto--img"
+                                              src="assets/img/icon/incompleto.svg"
+                                              alt="este campo es requerido"
+                                              [matTooltipPosition]="'above'"
+                                              matTooltip="Debe ingresar la información en el campo para continuar"
+                                              matTooltipClass="info-tooltip"
+                                              *ngIf="( formGestionSocial.get('conclusion').invalid && formGestionSocial.get('conclusion').touched) || ( formGestionSocial.get('conclusion').invalid && esRegistroNuevo === false )">
+                                    </span>
                                 </div>
                               </div>
                             </div>
@@ -146,7 +207,9 @@
                             <div class="col-md-12">
                               <div class="row">
                                 <div class="pr-1">
-                                  <label class="label-left">URL con soporte</label>
+                                    <label class="label-left">
+                                        URL con soporte
+                                    </label>
                                 </div>
                                 <div class="col d-flex">
                                     <mat-form-field style="width: 97.8%;">
